# tetris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile_commands.json  configure.sh  glad.c  main.c  run.sh
.cache/clangd/index/: context.c.181636111AE95DD8.idx  context.c.407666E8FA5FBAC4.idx  egl_context.c.1CFA4A7E2CE1E455.idx  egl_context.c.EC6CFA4DD8599775.idx  glfw3.h.6C34529EAC17B752.idx  glfw3.h.8AF51A91AD8A3D7A.idx  glx_context.c.31140BE82896D86C.idx  glx_context.c.CAD66AC8CF22EFAB.idx  init.c.218D5B976FB4C8C5.idx  init.c.EC21CAE6A45FC4FB.idx  input.c.96FE93BCB2267717.idx  input.c.AE6BA6B78A28B663.idx  internal.h.777B992D3935E168.idx  internal.h.F7FFF00FF2CB24F1.idx  linux_joystick.c.46CA6B721346390A.idx  linux_joystick.c.5D8F0D3853FD37A2.idx  linux_joystick.h.040339915D71405F.idx  linux_joystick.h.9DCC16A5193FA40F.idx  main.c.3A95E2E781162A7C.idx  main.c.A8CC599ACE46A160.idx  mappings.h.3C4D01BFE945925B.idx  mappings.h.95A0C7B10053F330.idx  monitor.c.2E08381EF05B2699.idx  monitor.c.B9F868B3AA78B038.idx  null_init.c.AB41194E4C737B6F.idx  null_init.c.CFA3495E9F5FD3C9.idx  null_joystick.c.45636E7315BD1B52.idx  null_joystick.c.46094A1FD88CA0E0.idx  null_joystick.h.A90B0920E887F218.idx  null_joystick.h.D79B669D4AD60FBF.idx  null_monitor.c.61389DDF836B7C32.idx  null_monitor.c.E21CFAD2CC85D748.idx  null_platform.h.A1C3575AD267C3E4.idx  null_platform.h.D9889D1FB5B61D8A.idx  null_window.c.47FF7EEC0E5F6E2B.idx  null_window.c.F711DEEE51DDFAF3.idx  (+36 more)
shaders/: simple.vshader
src/: CMakeLists.txt  main.c  shader.c
src/include/: shader.h
